chore(ui): quick visual cleanup  neutral background, simplified hero, standardized primary button, calmer footer

--- a/achievements.html
+++ b/achievements.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Achievements - Hon. Yenge Raphael</title>
+    <title>Achievements - H. Yenge Raphael Aondoaseer</title>
     <meta name="description"
-        content="Key achievements and milestones delivered under Hon. Yenge Raphael's leadership." />
+    content="Key achievements and milestones delivered under Yenge Raphael Aondoaseer's leadership." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,10 +37,10 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
-            <img src="img/rapheal.jpeg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+            <img src="img/rapheal.jpeg" alt="Portrait of Yenge Raphael Aondoaseer in formal attire"
                 class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">Milestones in Service</h1>
-            <p class="lead">Highlights of projects and deliveries for Tarka LGA</p>
+            <p class="lead">Highlights of projects and deliveries for Tarka Local Government Council</p>
         </div>
     </section>
 
@@ -50,7 +50,7 @@
             <div class="text-center mb-5">
                 <h2 class="display-6 text-primary">ONE YEAR IN OFFICE</h2>
                 <h3 class="mb-3">The Youth O'Clock Narrative Scorecard</h3>
-                <p class="lead">October 7, 2025 marks one year as Chairman of Tarka LGA. In just 365 days, by God's
+                <p class="lead">October 5, 2025 marks one year as Chairman of Tarka Local Government Council. In just 365 days, by God's
                     grace and your support, we have touched lives across education, health, youth empowerment,
                     infrastructure, agriculture, security, and politics.</p>
                 <div class="alert alert-success" role="alert">
@@ -66,9 +66,9 @@
                 <h4 class="mb-0">🎉 FEATURED: One Year in Office Celebration</h4>
             </div>
             <div class="card-body">
-                <small class="text-muted">October 7, 2025</small>
+                <small class="text-muted">October 5, 2025</small>
                 <h3>ONE YEAR IN OFFICE – THE YOUTH O'CLOCK NARRATIVE SCORECARD</h3>
-                <p class="lead">Today marks one year as Chairman of Tarka LGA. In just 365 days, by God's grace and
+                <p class="lead">Today marks one year as Chairman of Tarka Local Government Council. In just 365 days, by God's grace and
                     your support, we have touched lives across education, health, youth empowerment, infrastructure,
                     agriculture, security, and politics.</p>
 
@@ -106,7 +106,7 @@
 
                 <blockquote class="blockquote mt-3">
                     <p>"The Youth O'Clock Narrative has only just begun—the best is yet to come."</p>
-                    <footer class="blockquote-footer">Hon. Raphael Aondoseer Yenge</footer>
+                    <footer class="blockquote-footer">Yenge Raphael Aondoaseer</footer>
                 </blockquote>
 
                 <a href="achievements.html" class="btn btn-primary">View Complete Scorecard</a>
@@ -137,7 +137,7 @@
                 <small class="text-muted">October 1, 2025</small>
                 <h5>🇳🇬 Nigeria @ 65: Giant Still Stands Tall</h5>
                 <p>Celebrating Nigeria's 65th Independence Anniversary with the theme "Stronger Together, Brighter
-                    Tomorrow!" Tarka LGA joins the nation in reflecting on our journey and looking forward to a more
+                    Tomorrow!" Tarka Local Government Council joins the nation in reflecting on our journey and looking forward to a more
                     prosperous future.</p>
                 <p class="text-muted">#AondoaseerAliaZanzanBenueAmem</p>
             </div>
@@ -150,7 +150,7 @@
             <div class="card-body">
                 <small class="text-muted">September 29, 2025</small>
                 <h5>Historic Healthcare Milestone</h5>
-                <p>The first electric bike in Tarka LGA has been allocated to the first Teaching Hospital in the
+                <p>The first electric bike in Tarka Local Government Council has been allocated to the first Teaching Hospital in the
                     area (BSUTH Annex), alongside the Council Ambulance. This marks a new era in emergency medical
                     response for our communities.</p>
             </div>
@@ -158,7 +158,7 @@
     </div>
     <div class="col-md-6 mb-4">
         <div class="card">
-            <img src="https://pbs.twimg.com/media/G0tz8YUWIAApflO.jpg" alt="Healthcare center project in Tarka LGA"
+            <img src="https://pbs.twimg.com/media/G0tz8YUWIAApflO.jpg" alt="Healthcare center project in Tarka Local Government Council"
                 class="card-img-top" loading="lazy">
             <div class="card-body">
                 <h5>Grassroots Healthcare Project</h5>
@@ -243,7 +243,7 @@
                                 <li class="mb-2">✓ Resuscitation and upgrading of Ijorimenger Special Primary Health
                                     Care Centre</li>
                                 <li class="mb-2">✓ Donation of electric bike to Ijorimenger SPHC (BSUTH Annex)</li>
-                                <li class="mb-2">✓ Repair of Tarka LGA's ambulance for emergency medical response</li>
+                                <li class="mb-2">✓ Repair of Tarka Local Government Council's ambulance for emergency medical response</li>
                             </ul>
                         </div>
                     </div>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="card-body">
                             <ul class="list-unstyled">
-                                <li class="mb-2">✓ Grading of Nyambe–Ukyough rural road linking Tarka with Guma LGA</li>
+                                <li class="mb-2">✓ Grading of Nyambe–Ukyough rural road linking Tarka with Guma Local Government Council</li>
                                 <li class="mb-2">✓ Repair of Legislative 18-seater bus</li>
                                 <li class="mb-2">✓ Setting up Wannune Township Mega Layout Committee</li>
                             </ul>
@@ -325,7 +325,7 @@
                     <p>"I remain loyal to our Governor, Rev. Fr. Dr. Hyacinth Iormem Alia, and committed to delivering
                         more legacy projects. The Youth O'Clock Narrative has only just begun—the best is yet to come."
                     </p>
-                    <footer class="blockquote-footer">Hon. Raphael Aondoseer Yenge</footer>
+                    <footer class="blockquote-footer">Yenge Raphael Aondoaseer</footer>
                 </blockquote>
                 <p class="text-muted">#TheAliaTheBetter</p>
             </div>
@@ -351,14 +351,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <p>Follow for updates on Tarka Local Government Council developments.</p>
                     <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-facebook fa-2x"></i></a>
                     <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                    <p>&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka Local Government Council, Benue State, Nigeria</p>
                 </div>
             </div>
         </div>
