--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raphael Aondoseer Yenge - Executive Chairman, Tarka Local Government Council</title>
+    <title>Yenge Raphael Aondoaseer - Executive Chairman, Tarka Local Government Council</title>
     <meta name="description"
-        content="Official site of Raphael Aondoseer Yenge, APC Chairman of Tarka LGA, Benue State. Committed to infrastructure, healthcare, and youth empowerment since October 2024.">
+        content="Official site of Yenge Raphael Aondoaseer, APC Chairman of Tarka Local Government Council, Benue State. Committed to infrastructure, healthcare, and youth empowerment since October 2024.">
     <meta name="keywords"
-        content="Raphael Aondoseer Yenge, Tarka LGA, Benue State, APC, Nigerian politics, community development">
+        content="Yenge Raphael Aondoaseer, Tarka Local Government Council, Benue State, APC, Nigerian politics, community development">
     <!-- Open Graph -->
-    <meta property="og:title" content="Raphael Aondoseer Yenge">
-    <meta property="og:description" content="Serving Tarka LGA with integrity and progress.">
+    <meta property="og:title" content="Yenge Raphael Aondoaseer">
+    <meta property="og:description" content="Serving Tarka Local Government Council with integrity and progress.">
     <meta property="og:image" content="img/Raphael">
     <meta property="og:url" content="https://yengeraphael.com">
     <!-- Schema.org -->
@@ -19,7 +19,7 @@
     {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Raphael Aondoseer Yenge",
+    "name": "Yenge Raphael Aondoaseer",
         "jobTitle": "Executive Chairman, Tarka Local Government Council",
         "affiliation": {"@type": "Organization", "name": "All Progressives Congress (APC)"},
         "url": "https://yengeraphael.com",
@@ -35,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,9 +56,9 @@
     <!-- Hero Section -->
     <section class="hero bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="img/yenge.jpg" alt="Portrait of Raphael Aondoseer Yenge" class="rounded-circle mb-3 img-fluid"
+            <img src="img/yenge.jpg" alt="Portrait of Yenge Raphael Aondoaseer" class="rounded-circle mb-3 img-fluid"
                 style="max-width: 200px;" loading="lazy">
-            <h1 class="display-4 fw-bold">Raphael Aondoseer Yenge</h1>
+            <h1 class="display-4 fw-bold">Yenge Raphael Aondoaseer</h1>
             <p class="lead">Executive Chairman, Tarka Local Government Council<br>Benue State, Nigeria</p>
             <a href="contact.html" class="btn btn-light btn-lg">Get Involved</a>
         </div>
@@ -70,14 +70,15 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2>Leading with Vision & Empathy</h2>
-                    <p class="lead">Elected October 2024 after declaring candidacy in July, Raphael Aondoseer Yenge—a
-                        psychologist
-                        with 6+ years in NGOs and Nigerian Psychological Association member—drives sustainable growth in
-                        Tarka LGA. Tribunal-cleared in April 2025, his focus: Grassroots infrastructure, healthcare,
-                        education, and youth empowerment through the <strong>"Youth O'Clock Narrative."</strong></p>
+                    <p class="lead">Elected October 5th, 2024, after declaring candidacy in July, Yenge Raphael Aondoaseer—a
+                        psychologist with over six years of experience in NGOs, lecturing, and active membership in the
+                        Nigerian Psychological Association—has been driving sustainable growth in Tarka Local Government Council. Cleared by the
+                        election tribunal in April 2025, his administration focuses on grassroots infrastructure,
+                        healthcare, education, youth empowerment, and leadership mentorship under the banner of the
+                        <strong>#YouthOClockNarrative</strong>.</p>
                     <div class="alert alert-success mb-4" role="alert">
                         <h5 class="alert-heading">🎉 One Year Milestone!</h5>
-                        <p class="mb-0">October 7, 2025 marked one year in office with remarkable achievements across
+                        <p class="mb-0">October 5, 2025 marked one year in office with remarkable achievements across
                             30+ landmark projects, including the historic establishment of BSUTH Annex in Tarka.</p>
                     </div>
                     <a href="about.html" class="btn btn-primary">Learn More</a>
@@ -148,7 +149,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="card">
                         <img src="https://pbs.twimg.com/media/G0tz8YUWIAApflO.jpg"
-                            alt="Healthcare center project in Tarka LGA" class="card-img-top" loading="lazy">
+                            alt="Healthcare center project in Tarka Local Government Council" class="card-img-top" loading="lazy">
                         <div class="card-body">
                             <h5>Grassroots Healthcare Project</h5>
                             <p class="text-muted">Sep 13, 2025: New center brings development to communities.</p>
@@ -162,7 +163,7 @@
                             loading="lazy">
                         <div class="card-body">
                             <h5>One-Year Scorecard: Youth O'Clock Narrative</h5>
-                            <p class="text-muted">Oct 7, 2025: Landmark projects in infrastructure & education.</p>
+                            <p class="text-muted">Oct 5, 2025: Landmark projects in infrastructure & education.</p>
                             <a href="news.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
@@ -180,7 +181,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for real-time updates on Tarka LGA progress.</p>
+                    <p>Follow for real-time updates on Tarka Local Government Council progress.</p>
                     <a href="https://www.facebook.com/RaphaelAondoaseerYenge" class="text-white me-3"
                         aria-label="Facebook"><i class="fab fa-facebook fa-2x"></i></a>
                     <a href="https://www.instagram.com/rhalphray/" class="text-white me-3" aria-label="Instagram"><i
@@ -189,7 +190,7 @@
                             class="fab fa-x-twitter fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Raphael Aondoseer Yenge. All rights reserved. | Tarka LGA Secretariat, Wannune,
+                    <p>&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka Local Government Council Secretariat, Wannune,
                         Benue State, Nigeria</p>
                 </div>
             </div>
