--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Hon. Yenge Raphael</title>
-    <meta name="description" content="About Hon. Yenge Raphael — background, vision and public service." />
+    <title>About Yenge Raphael Aondoaseer</title>
+    <meta name="description" content="About Yenge Raphael Aondoaseer — background, vision and public service." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
     <!-- Navigation (same as index.html) -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,13 +32,13 @@
         </div>
     </nav>
 
-    <!-- Hero with Hon. Yenge's Portrait -->
+    <!-- Hero with  Yenge's Portrait -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
-            <img src="img/rapheyengestanding.jpg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+            <img src="img/rapheyengestanding.jpg" alt="Portrait of Yenge Raphael Aondoaseer in formal attire"
                 class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
-            <h1 class="display-5 fw-bold">About Hon. Yenge Raphael</h1>
-            <p class="lead">Background, vision and commitment to Tarka Local Government Area</p>
+            <h1 class="display-5 fw-bold">About Yenge Raphael Aondoaseer</h1>
+            <p class="lead">Background, vision and commitment to Tarka Local Government Council</p>
         </div>
     </section>
 
@@ -49,17 +49,14 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 aria-label="Background">Background & Vision</h2>
-                    <p>Hon. Raphael Aondoseer Yenge, sworn in October 2024 as APC Executive Chairman of Tarka LGA,
-                        declared his candidacy on July 21, 2024, driven by a commitment to serve. With a psychology
-                        degree and 6+ years as an NGO research assistant/consultant, he's a Nigerian Psychological
-                        Association member focused on empathetic governance.</p>
-                    <p>Post-tribunal clearance (April 12, 2025), his <strong>"Youth O'Clock" narrative</strong>
-                        emphasizes global best practices for planning, bridging urban-rural gaps, and cultural
-                        preservation in Benue State. In his first year (October 2024 - October 2025), he has delivered
-                        on 30+ landmark projects, with the historic institutionalization of BSUTH Annex being the crown
-                        achievement.</p>
+                    <p>Elected October 5th, 2024, after declaring candidacy in July, Yenge Raphael Aondoaseer—a
+                        psychologist with over six years of experience in NGOs, lecturing, and active membership in the
+                        Nigerian Psychological Association—has been driving sustainable growth in Tarka Local Government Council. Cleared by the
+                        election tribunal in April 2025, his administration focuses on grassroots infrastructure,
+                        healthcare, education, youth empowerment, and leadership mentorship under the banner of the
+                        <strong>#YouthOClockNarrative</strong>.</p>
                     <img src="https://via.placeholder.com/800x400?text=Community+Engagement"
-                        alt="Hon. Yenge engaging with Tarka residents" class="img-fluid rounded mb-3" loading="lazy">
+                        alt="Yenge engaging with Tarka residents" class="img-fluid rounded mb-3" loading="lazy">
 
                     <div class="alert alert-info mb-4">
                         <h5><i class="fas fa-clock me-2"></i>The Youth O'Clock Philosophy</h5>
@@ -111,7 +108,7 @@
                 <div class="card-body">
                     <small class="text-muted">July 21, 2024</small>
                     <h5>Candidacy Declaration</h5>
-                    <p>Declared candidacy with commitment to serve and transform Tarka LGA.</p>
+                    <p>Declared candidacy with commitment to serve and transform Tarka Local Government Council.</p>
                 </div>
             </div>
         </div>
@@ -123,14 +120,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <p>Follow for updates on Tarka Local Government Council developments.</p>
                     <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-facebook fa-2x"></i></a>
                     <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                    <p>&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka Local Government Council, Benue State, Nigeria</p>
                 </div>
             </div>
         </div>
