--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Hon. Yenge Raphael</title>
-    <meta name="description" content="Contact page for Hon. Yenge Raphael — office location and contact form." />
+    <title>Contact Yenge Raphael Aondoaseer</title>
+    <meta name="description" content="Contact page for Yenge Raphael Aondoaseer — office location and contact form." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
-            <img src="img/apchat.jpeg" alt="Portrait of Hon. Raphael Aondoseer Yenge"
+            <img src="img/apchat.jpeg" alt="Portrait of Yenge Raphael Aondoaseer"
                 class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">Reach Out</h1>
             <p class="lead">Office details, contact form and newsletter signup</p>
@@ -96,8 +96,8 @@
                     <div class="card shadow-sm h-100">
                         <div class="card-body">
                             <h5 class="card-title">Office & Contact Info</h5>
-                            <p class="mb-1"><strong>Office:</strong> Tarka LGA Secretariat, Wannune, Benue State</p>
-                            <p class="mb-1"><strong>Phone:</strong> +234-XXX-XXXXXX</p>
+                            <p class="mb-1"><strong>Office:</strong> Tarka Local Government Council Secretariat, Wannune, Benue State</p>
+                            <p class="mb-1"><strong>Phone:</strong> +234-703-6912444</p>
                             <p class="mb-3"><strong>Email:</strong> <a
                                     href="mailto:info@yengeraphael.com">info@yengeraphael.com</a></p>
 
@@ -136,14 +136,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <p>Follow for updates on Tarka Local Government Council developments.</p>
                     <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-facebook fa-2x"></i></a>
                     <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                    <p>&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka Local Government Council, Benue State, Nigeria</p>
                 </div>
             </div>
         </div>
