--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery - Hon. Yenge Raphael</title>
-    <meta name="description" content="Photo highlights and moments from Hon. Yenge Raphael's service in Tarka LGA." />
+    <title>Gallery - Yenge Raphael Aondoaseer</title>
+    <meta name="description" content="Photo highlights and moments from Yenge Raphael Aondoaseer's service in Tarka Local Council." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,10 +36,10 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
-            <img src="img/yengeandwife.jpeg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+            <img src="img/yengeandwife.jpeg" alt="Portrait of Yenge Raphael Aondoaseer in formal attire"
                 class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">Gallery</h1>
-            <p class="lead">Moments from events, projects and community life in Tarka LGA</p>
+            <p class="lead">Moments from events, projects and community life in Tarka Local Government Council</p>
         </div>
     </section>
 
@@ -129,7 +129,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p class="mb-2">Follow for updates on Tarka LGA developments.</p>
+                    <p class="mb-2">Follow for updates on Tarka Local Government Council developments.</p>
                     <a href="https://facebook.com/yengeraphael" class="text-white me-3" aria-label="Facebook"><i
                             class="fab fa-facebook fa-lg"></i></a>
                     <a href="https://instagram.com/yengeraphael" class="text-white me-3" aria-label="Instagram"><i
@@ -138,7 +138,7 @@
                             class="fab fa-x fa-lg"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State,
+                    <p class="mb-0">&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka, Benue State,
                         Nigeria</p>
                 </div>
             </div>
