--- a/news.html
+++ b/news.html
@@ -8,8 +8,8 @@
 
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>News & Updates - Hon. Yenge Raphael</title>
-        <meta name="description" content="Latest news, events and updates from Hon. Yenge Raphael and Tarka LGA." />
+    <title>News & Updates - Yenge Raphael Aondoaseer</title>
+    <meta name="description" content="Latest news, events and updates from Yenge Raphael Aondoaseer and Tarka Local Government Council." />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael Aondoaseer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,7 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
-            <img src="img/raphwithgovalia.jpeg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+            <img src="img/raphwithgovalia.jpeg" alt="Portrait of Yenge Raphael Aondoaseer in formal attire"
                 class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">News & Updates</h1>
             <p class="lead">Stay informed on events, announcements and community stories</p>
@@ -116,7 +116,7 @@
                         <div class="card-body">
                             <small class="text-muted">Sep 13, 2025</small>
                             <h5>Healthcare Center Project</h5>
-                            <p>Commendable grassroots development in Tarka LGA.</p>
+                            <p>Commendable grassroots development in Tarka Local Government Council.</p>
                             <a href="https://x.com/EphraimSev73998/status/1966793172408750510">View Post</a>
                         </div>
                     </div>
@@ -157,14 +157,14 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <p>Follow for updates on Tarka Local Government Council developments.</p>
                     <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-facebook fa-2x"></i></a>
                     <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
                             class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                    <p>&copy; 2025 Yenge Raphael Aondoaseer. All rights reserved. | Tarka Local Government Council, Benue State, Nigeria</p>
                 </div>
             </div>
         </div>
